--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+hcw-athome-caregiver (4.3.3) focal; urgency=medium
+
+  [ Muhammed ]
+  * adjust login page styles
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Tue, 01 Mar 2022 17:50:33 +0100
+
 hcw-athome-caregiver (4.3.2) focal; urgency=medium
 
   * Initial Release.
