--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hcw-athome-caregiver (4.3.5) focal; urgency=medium
+
+  * Put back @Home in sidebar
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Mon, 07 Mar 2022 15:47:21 +0100
+
 hcw-athome-caregiver (4.3.4) focal; urgency=medium
 
   [ Muhammed ]
