--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,15 @@
+hcw-athome-caregiver (4.3.10) focal; urgency=medium
+
+  [ Muhammed ]
+  * use correct font
+  * FIX: disable video for audio only calls refs #4188
+
+  [ Olivier Bitsch ]
+  * refs #4195
+  * refs #4194 - remove support page
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Fri, 25 Mar 2022 08:39:12 +0100
+
 hcw-athome-caregiver (4.3.9) focal; urgency=medium
 
   * Remove unwanted logo from login page
