New production release 4.3.11

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hcw-athome-caregiver (4.3.11) focal; urgency=medium
+
+  * Removing country flag for languages
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Fri, 25 Mar 2022 16:43:01 +0100
+
 hcw-athome-caregiver (4.3.10) focal; urgency=medium
 
   [ Muhammed ]
