--- a/debian/changelog
+++ b/debian/changelog
@@ -1,73 +1,80 @@
-hcw-athome-caregiver (4.3.11) focal; urgency=medium
+hcw-athome-caregiver (4.3.12) focal; urgency=medium
 
-  * Removing country flag for languages
+- Removing country flag for languages
 
- -- Olivier Bitsch <olivier.b@iabsis.com>  Fri, 25 Mar 2022 16:43:01 +0100
+-- Olivier Bitsch <olivier.b@iabsis.com> Fri, 25 Mar 2022 16:43:01 +0100
 
 hcw-athome-caregiver (4.3.10) focal; urgency=medium
 
-  [ Muhammed ]
-  * use correct font
-  * FIX: disable video for audio only calls refs #4188
+[ Muhammed ]
 
-  [ Olivier Bitsch ]
-  * refs #4195
-  * refs #4194 - remove support page
+- use correct font
+- FIX: disable video for audio only calls refs #4188
 
- -- Olivier Bitsch <olivier.b@iabsis.com>  Fri, 25 Mar 2022 08:39:12 +0100
+[ Olivier Bitsch ]
+
+- refs #4195
+- refs #4194 - remove support page
+
+-- Olivier Bitsch <olivier.b@iabsis.com> Fri, 25 Mar 2022 08:39:12 +0100
 
 hcw-athome-caregiver (4.3.9) focal; urgency=medium
 
-  * Remove unwanted logo from login page
+- Remove unwanted logo from login page
 
- -- Olivier Bitsch <olivier.b@iabsis.com>  Mon, 14 Mar 2022 09:31:34 +0100
+-- Olivier Bitsch <olivier.b@iabsis.com> Mon, 14 Mar 2022 09:31:34 +0100
 
 hcw-athome-caregiver (4.3.8) focal; urgency=medium
 
-  * Remove HUG@Home branding
+- Remove HUG@Home branding
 
- -- Olivier Bitsch <olivier.b@iabsis.com>  Fri, 11 Mar 2022 14:33:38 +0100
+-- Olivier Bitsch <olivier.b@iabsis.com> Fri, 11 Mar 2022 14:33:38 +0100
 
 hcw-athome-caregiver (4.3.7) focal; urgency=medium
 
-  [ Muhammed ]
-  * use translation for connection error
-  * fix dashboard cards alignment
+[ Muhammed ]
 
- -- Olivier Bitsch <olivier.b@iabsis.com>  Fri, 11 Mar 2022 09:13:26 +0100
+- use translation for connection error
+- fix dashboard cards alignment
+
+-- Olivier Bitsch <olivier.b@iabsis.com> Fri, 11 Mar 2022 09:13:26 +0100
 
 hcw-athome-caregiver (4.3.6) focal; urgency=medium
 
-  [ Muhammed ]
-  * FIX audio volume indicator refs #4143
+[ Muhammed ]
 
- -- Olivier Bitsch <olivier.b@iabsis.com>  Wed, 09 Mar 2022 12:19:47 +0100
+- FIX audio volume indicator refs #4143
+
+-- Olivier Bitsch <olivier.b@iabsis.com> Wed, 09 Mar 2022 12:19:47 +0100
 
 hcw-athome-caregiver (4.3.5) focal; urgency=medium
 
-  * Put back @Home in sidebar
+- Put back @Home in sidebar
 
- -- Olivier Bitsch <olivier.b@iabsis.com>  Mon, 07 Mar 2022 15:47:21 +0100
+-- Olivier Bitsch <olivier.b@iabsis.com> Mon, 07 Mar 2022 15:47:21 +0100
 
 hcw-athome-caregiver (4.3.4) focal; urgency=medium
 
-  [ Muhammed ]
-  * get and display logo from config refs #4114
+[ Muhammed ]
 
-  [ Olivier Bitsch ]
-  * Updating favicon
+- get and display logo from config refs #4114
 
- -- Olivier Bitsch <olivier.b@iabsis.com>  Mon, 07 Mar 2022 15:27:39 +0100
+[ Olivier Bitsch ]
+
+- Updating favicon
+
+-- Olivier Bitsch <olivier.b@iabsis.com> Mon, 07 Mar 2022 15:27:39 +0100
 
 hcw-athome-caregiver (4.3.3) focal; urgency=medium
 
-  [ Muhammed ]
-  * adjust login page styles
+[ Muhammed ]
 
- -- Olivier Bitsch <olivier.b@iabsis.com>  Tue, 01 Mar 2022 17:50:33 +0100
+- adjust login page styles
+
+-- Olivier Bitsch <olivier.b@iabsis.com> Tue, 01 Mar 2022 17:50:33 +0100
 
 hcw-athome-caregiver (4.3.2) focal; urgency=medium
 
-  * Initial Release.
+- Initial Release.
 
- -- Olivier Bitsch <olivier.b@iabsis.com>  Thu, 24 Feb 2022 15:09:34 +0100
+-- Olivier Bitsch <olivier.b@iabsis.com> Thu, 24 Feb 2022 15:09:34 +0100
