--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+hcw-athome-caregiver (4.3.17) focal; urgency=medium
+
+  [ muhammed ]
+  * Redirect to saml provider if auth method is saml
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Fri, 08 Jul 2022 15:48:53 +0200
+
 hcw-athome-caregiver (4.3.16) focal; urgency=medium
 
   [ muhammed ]
