--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+hcw-athome-caregiver (0.4.3.28) focal; urgency=medium
+
+  [ Gor Grigoryan ]
+  * refs: #6016: Add new link used to invite third party user into opened consultation
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Fri, 21 Jul 2023 13:26:03 +0200
+
 hcw-athome-caregiver (0.4.3.27) focal; urgency=medium
 
   [ YassineEF ]
