--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+hcw-athome-caregiver (0.4.3.32) focal; urgency=medium
+
+  [ Aram ]
+  * feat: add OpenId integration
+
+  [ Gor Grigoryan ]
+  * change genral information ui
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Fri, 11 Aug 2023 11:38:25 +0200
+
 hcw-athome-caregiver (0.4.3.31) focal; urgency=medium
 
   [ Olivier Bitsch ]
