--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+hcw-athome-caregiver (0.4.3.33) focal; urgency=medium
+
+  [ Gor Grigoryan ]
+  * open id button fix
+  * fix redirection
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Fri, 11 Aug 2023 16:56:10 +0200
+
 hcw-athome-caregiver (0.4.3.32) focal; urgency=medium
 
   [ Aram ]
