--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+hcw-athome-caregiver (0.4.3.34) focal; urgency=medium
+
+  [ Gor Grigoryan ]
+  * add locale in req headers
+
+  [ Olivier Bitsch ]
+  * Fix URL rooting in nginx docker
+  * Add root-less configuration
+  * Use root-less ready container
+  * Fix nginx warning + change default port
+  * Fix yarn and nginx config
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Wed, 06 Sep 2023 13:42:57 +0200
+
 hcw-athome-caregiver (0.4.3.33) focal; urgency=medium
 
   [ Gor Grigoryan ]
