--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+hcw-athome-caregiver (0.4.3.37) focal; urgency=medium
+
+  [ Olivier Bitsch ]
+  * Add build for docker and podman in makefile
+
+  [ Gor Grigoryan ]
+  * redesign invite expert modal, add confirmation
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Tue, 26 Sep 2023 15:18:47 +0200
+
 hcw-athome-caregiver (0.4.3.36) focal; urgency=medium
 
   * Adding healthcheck URL
