--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+hcw-athome-caregiver (0.4.3.39) focal; urgency=medium
+
+  [ Olivier Bitsch ]
+  * Retrigger build
+
+  [ Gor Grigoryan ]
+  * refs #6151, Add mute button for doctor
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Fri, 29 Sep 2023 11:35:29 +0200
+
 hcw-athome-caregiver (0.4.3.38) focal; urgency=medium
 
   [ Gor Grigoryan ]
