--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+hcw-athome-caregiver (0.4.3.50) focal; urgency=medium
+
+  * Update nginx configuration file (security reason)
+  * Update nginx configuration file (security reason)
+  * Enable nginx compression on various mimetypes
+  * Image optimization + angular version fixes
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Fri, 10 Nov 2023 08:26:24 +0100
+
 hcw-athome-caregiver (0.4.3.49) focal; urgency=medium
 
   [ Gor Grigoryan ]
