--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hcw-athome-caregiver (0.4.3.52) focal; urgency=medium
+
+  * Rollback icon change
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Fri, 10 Nov 2023 14:14:17 +0100
+
 hcw-athome-caregiver (0.4.3.51) focal; urgency=medium
 
   [ Gor Grigoryan ]
