--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+hcw-athome-caregiver (0.4.3.53) focal; urgency=medium
+
+  [ Gor Grigoryan ]
+  * check rejectin
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Fri, 10 Nov 2023 14:27:24 +0100
+
 hcw-athome-caregiver (0.4.3.52) focal; urgency=medium
 
   * Rollback icon change
