--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+hcw-athome-caregiver (0.4.3.54) focal; urgency=medium
+
+  [ Gor Grigoryan ]
+  * download pdf
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Fri, 10 Nov 2023 14:41:56 +0100
+
 hcw-athome-caregiver (0.4.3.53) focal; urgency=medium
 
   [ Gor Grigoryan ]
