--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+hcw-athome-caregiver (0.4.3.55) focal; urgency=medium
+
+  [ Gor Grigoryan ]
+  * default language en if no translation
+
+  [ Olivier Bitsch ]
+  * translation files + npm package update
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Fri, 10 Nov 2023 15:06:19 +0100
+
 hcw-athome-caregiver (0.4.3.54) focal; urgency=medium
 
   [ Gor Grigoryan ]
