--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+hcw-athome-caregiver (0.4.3.57) focal; urgency=medium
+
+  [ Olivier Bitsch ]
+  * Adding missing translation
+
+  [ Gor Grigoryan ]
+  * update hcw-stream-lib
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Mon, 13 Nov 2023 12:11:43 +0100
+
 hcw-athome-caregiver (0.4.3.56) focal; urgency=medium
 
   [ Gor Grigoryan ]
