--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+hcw-athome-caregiver (0.4.3.58) focal; urgency=medium
+
+  * Revert zone.js to 0.12
+  * New image optimization
+  * Rebuild with latest SDK
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Tue, 14 Nov 2023 10:31:50 +0100
+
 hcw-athome-caregiver (0.4.3.57) focal; urgency=medium
 
   [ Olivier Bitsch ]
