--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+hcw-athome-caregiver (0.4.3.59) focal; urgency=medium
+
+  * Update one package
+  * Adding webpack + use npm 18
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Tue, 14 Nov 2023 12:06:45 +0100
+
 hcw-athome-caregiver (0.4.3.58) focal; urgency=medium
 
   * Revert zone.js to 0.12
