--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hcw-athome-caregiver (0.4.3.60) focal; urgency=medium
+
+  * Split js files to chunk + fix environment
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Tue, 14 Nov 2023 12:25:16 +0100
+
 hcw-athome-caregiver (0.4.3.59) focal; urgency=medium
 
   * Update one package
