--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hcw-athome-caregiver (0.4.3.61) focal; urgency=medium
+
+  * Rollback to previous build profile
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Tue, 14 Nov 2023 12:35:05 +0100
+
 hcw-athome-caregiver (0.4.3.60) focal; urgency=medium
 
   * Split js files to chunk + fix environment
