--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+hcw-athome-caregiver (0.4.3.63) focal; urgency=medium
+
+  [ Gor Grigoryan ]
+  * empty chat error fix
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Tue, 14 Nov 2023 16:09:43 +0100
+
 hcw-athome-caregiver (0.4.3.62) focal; urgency=medium
 
   * Adding custom script to chunk main js files
