--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+hcw-athome-caregiver (0.4.3.69) focal; urgency=medium
+
+  [ Olivier Bitsch ]
+  * Improve security headers
+
+  [ Gor Grigoryan ]
+  * remove mime-type header, add validation for uploading file
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Mon, 20 Nov 2023 15:03:17 +0100
+
 hcw-athome-caregiver (0.4.3.68) focal; urgency=medium
 
   [ Gor Grigoryan ]
