--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -83,6 +83,7 @@
   "consultation.microSelection": "Choix du micro",
   "consultation.cameraSelection": "Choix de la caméra",
   "consultation.close": "Fermer",
+  "consultation.callError": "Imposible de démarrer l'appel, le serveur a retourné une erreur",
   "dashboard.dashboard": "Tableau de bord",
   "dashboard.room": "SALLE",
   "dashboard.waiting": "D'ATTENTE",
@@ -308,6 +309,7 @@
   "testMedia.microTest": "TEST DU MICRO",
   "testMedia.aProperlyTuned": "Un micro bien réglé doit mettre le VU-mètre dans la zone centrale verte lorsque vous parlez.",
   "testMedia.cameraTest": "TEST DE LA CAMÉRA",
+  "testMedia.testError": "Le test a échoué, le serveur a retourné une erreur\n",
   "topNav.profile": "Profil",
   "topNav.logout": "Se déconnecter",
   "topNav.startTheNextConsultation": "Démarrer la consultation suivante",
