--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+hcw-athome-caregiver (0.4.3.74) focal; urgency=medium
+
+  [ Gor Grigoryan ]
+  * add translation
+  * refs #6125, Display proper error if no mediasoup server available
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Tue, 28 Nov 2023 09:25:00 +0100
+
 hcw-athome-caregiver (0.4.3.73) focal; urgency=medium
 
   [ Olivier Bitsch ]
