refs #6250, White field name is almost invisible

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -95,7 +95,8 @@
     "microSelection": "Micro selection",
     "cameraSelection": "Camera selection",
     "close": "Close",
-    "callError": "Unable to initiate call, server returned"
+    "callError": "Unable to initiate call, server returned",
+    "expert_link": "Expert Link"
   },
   "dashboard": {
     "dashboard": "Dashboard",
