refs #6259, Adding expert when patient info filled validate the modal

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -172,6 +172,7 @@
     "pleaseChooseAWaitingQueue": "Please choose the queue",
     "patient": "Patient",
     "thirdParty": "Third party",
+    "inviteExpert": "Invite Expert",
     "dateTime": "",
     "ar": "Arabic",
     "fr": "French",
