--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+hcw-athome-caregiver (0.4.3.78) focal; urgency=medium
+
+  [ Gor Grigoryan ]
+  * fix global styles add dot loader
+  * change doctor app primary color to read from backend
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Thu, 07 Dec 2023 08:40:29 +0100
+
 hcw-athome-caregiver (0.4.3.77) focal; urgency=medium
 
   [ Olivier Bitsch ]
