--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+hcw-athome-caregiver (0.4.3.80) focal; urgency=medium
+
+  [ Gor Grigoryan ]
+  * fix widget container
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Thu, 07 Dec 2023 16:40:17 +0100
+
 hcw-athome-caregiver (0.4.3.79) focal; urgency=medium
 
   [ Olivier Bitsch ]
