--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -25,7 +25,7 @@
     "testVideoSound": "Test video/sound",
     "support": "Support",
     "reconnected": "You are reconnected",
-    "connectionFailed": "The connection to the server is not functioning properly, and you can no longer receive consultation requests. If the issue persists, please contact your support."
+    "connectionFailed": "The connection to the server is not functioning properly, and you can no longer receive consultation requests. If the issue persists, please refresh your page."
   },
   "chat": {
     "generalInformation": "GENERAL INFORMATION",
