--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hcw-athome-caregiver (5.0.0) focal; urgency=medium
+
+  * Version 5.0.0
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Fri, 15 Dec 2023 08:55:35 +0100
+
 hcw-athome-caregiver (0.4.3.84) focal; urgency=medium
 
   [ Gor Grigoryan ]
