add new consultation form button

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -359,7 +359,8 @@
     "terminateTheConsultation": "Terminate the consultation",
     "patientFirstnameAndLastname": "Patient name",
     "patientBirthday": "Patient birthday",
-    "nurse": "Nurse"
+    "nurse": "Nurse",
+    "new_consultation_form": "New consultation form"
   },
   "confirmationDialog": {
     "yesText": "Confirm",
