--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+hcw-athome-caregiver (5.0.1) focal; urgency=medium
+
+  [ Gor Grigoryan ]
+  * add new consultation form button
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Fri, 22 Dec 2023 13:24:18 +0100
+
 hcw-athome-caregiver (5.0.0) focal; urgency=medium
 
   * Version 5.0.0
