--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+hcw-athome-caregiver (5.0.2) focal; urgency=medium
+
+  [ Gor Grigoryan ]
+  * fix doctor video
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Thu, 28 Dec 2023 09:30:39 +0100
+
 hcw-athome-caregiver (5.0.1) focal; urgency=medium
 
   [ Gor Grigoryan ]
