--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -123,7 +123,8 @@
     "time": "Time",
     "displayTheList": "Display the list",
     "openedConsultations": "OPENED CONSULTATIONS",
-    "consultationsListAwaitingToBeClosedOrCompleted": "Consultations list awaiting to be closed or completed"
+    "consultationsListAwaitingToBeClosedOrCompleted": "Consultations list awaiting to be closed or completed",
+    "sendNewInvite": "Send new invite"
   },
   "footer": {
     "supportedByThePrivateFoundation": "Supported by the private foundation"
