add ability to send whatsapp sms

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -172,6 +172,11 @@
     "pleaseChooseLanguage": "Please choose language",
     "scheduledAt": "Planned on",
     "guests": "Guests",
+    "remove": "Remove",
+    "anotherExpert": "Add Another Expert",
+    "required": "Required",
+    "invalidEmailAddress": "Invalid email address",
+    "notPermitted": "This phone number is not permitted to be used on this platform.",
     "inviteLovedOneOrProfessional": "Invite a loved one or another caregiver",
     "emailOrSMS": "Email or SMS",
     "inviteTranslator": "Invite an interpreter",
