refs #6636, Add /cgu route to doctor interface

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -128,6 +128,12 @@
     "footer": {
         "supportedByThePrivateFoundation": "Supported by the private foundation"
     },
+    "cgu": {
+        "termsAndConditions": "Terms & Conditions (T&C)",
+        "backToHome": "Return to Home",
+        "selectCountry": "This terms applies to the country:",
+        "notConfigured": "Terms and conditions have not yet been configured."
+    },
     "forgotPassword": {
         "home": "HOME",
         "youForgotYourPassword": "You forgot your password:",
