--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+hcw-athome-caregiver (0.5.0.8) focal; urgency=medium
+
+  [ Olivier Bitsch ]
+  * Translated using Weblate (French)
+  * Translated using Weblate (English)
+  * Translated using Weblate (French)
+
+  [ Gor Grigoryan ]
+  * fix experts validator in create invite
+  * refs #6636, Add /cgu route to doctor interface
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Wed, 15 May 2024 08:40:33 +0200
+
 hcw-athome-caregiver (5.0.7) focal; urgency=medium
 
   * Rollback change b7ecdf87
