--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hcw-athome-caregiver (0.5.0.9) focal; urgency=medium
+
+  * Fix cache policy for markdown files and add proxy-revalidate for index.html
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Wed, 15 May 2024 16:18:00 +0200
+
 hcw-athome-caregiver (0.5.0.8) focal; urgency=medium
 
   [ Olivier Bitsch ]
