--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -112,8 +112,7 @@
     },
     "dashboard": {
         "dashboard": "Dashboard",
-        "room": "ROOM",
-        "waiting": "WAITING",
+        "waitingRoom": "WAITING ROOM",
         "consultationsListInAwaitingTreatment": "Consultations list in awaiting treatment",
         "startNextConsultation": "Start next consultation",
         "noConsultation": "No consultation",
