--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+hcw-athome-caregiver (5.0.10) focal; urgency=medium
+
+  [ Olivier Bitsch ]
+  * Translated using Weblate (French)
+  * Add script to permit to override languages
+  * Fix dashboard translation
+
+  [ Gor Grigoryan ]
+  * refs #6776, Have a way to change language
+  * env update
+  * remove unused styles
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Thu, 30 May 2024 08:46:12 +0200
+
 hcw-athome-caregiver (5.0.9) focal; urgency=medium
 
   * Fix cache policy for markdown files and add proxy-revalidate for index.html
