--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hcw-athome-caregiver (5.0.11) focal; urgency=medium
+
+  * Fix json formating for french
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Thu, 30 May 2024 13:14:09 +0200
+
 hcw-athome-caregiver (5.0.10) focal; urgency=medium
 
   [ Olivier Bitsch ]
