--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+hcw-athome-caregiver (5.0.12) focal; urgency=medium
+
+  [ Olivier Bitsch ]
+  * Update translation
+
+  [ Weblate Admin ]
+  * Translated using Weblate (English)
+  * Translated using Weblate (French)
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Fri, 07 Jun 2024 08:36:47 +0200
+
 hcw-athome-caregiver (5.0.11) focal; urgency=medium
 
   * Fix json formating for french
