--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hcw-athome-caregiver (0.5.0.14) focal; urgency=medium
+
+  * Fix translation
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Thu, 11 Jul 2024 15:04:24 +0200
+
 hcw-athome-caregiver (0.5.0.13) focal; urgency=medium
 
   [ Olivier Bitsch ]
