--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,18 @@
-hcw-athome-caregiver (0.5.0.14) focal; urgency=medium
+hcw-athome-caregiver (5.1.1) focal; urgency=medium
+
+  [ Gor Grigoryan ]
+  * remove log
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Mon, 22 Jul 2024 09:58:07 +0200
+
+hcw-athome-caregiver (5.1.0) focal; urgency=medium
+
+  [ Gor Grigoryan ]
+  * remove log
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Mon, 22 Jul 2024 09:57:41 +0200
+
+hcw-athome-caregiver (5.0.14) focal; urgency=medium
 
   * Fix translation
 
