update chat general information

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -67,7 +67,9 @@
         "IMADTeam": "IMADTeam",
         "joinVideoCall": "Join video",
         "inviteExpert": "Invite a colleague",
-        "requestedBy": "Requested by"
+        "requestedBy": "Requested by",
+        "viewMore": "View more",
+        "viewLess": "View less"
     },
     "consultations": {
         "noPatientName": "Undefined",
