--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+hcw-athome-caregiver (0.5.1.2) focal; urgency=medium
+
+  [ Aram ]
+  * feat: twilio whatsapp config
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Mon, 16 Sep 2024 13:43:26 +0200
+
 hcw-athome-caregiver (5.1.1) focal; urgency=medium
 
   [ Gor Grigoryan ]
