terms modal imporovements

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -131,7 +131,7 @@
     },
     "cgu": {
         "termsAndConditions": "Terms & Conditions (T&C)",
-        "backToHome": "Return to Home",
+        "backToHome": "Back",
         "submit": "Submit",
         "youHaveTo": "You have to accept",
         "terms": "Terms and Condition",
