--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+hcw-athome-caregiver (5.1.11) focal; urgency=medium
+
+  [ Gor Grigoryan ]
+  * terms modal imporovements
+
+ -- Olivier Bitsch <olivier.b@iabsis.com>  Tue, 24 Sep 2024 11:38:15 +0200
+
 hcw-athome-caregiver (5.1.10) focal; urgency=medium
 
   [ Gor Grigoryan ]
