--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -135,11 +135,11 @@
         "submit": "Submit",
         "youHaveTo": "You have to accept",
         "terms": "Terms and Condition",
-        "before": "before",
+        "before": "before you can use HCW@Home.",
         "pleaseAccept": "You have to accept {{terms}}  before",
         "selectCountry": "This terms applies to the country:",
         "notConfigured": "Terms and conditions have not yet been configured.",
-        "description": "Some description"
+        "description": "Access condition"
     },
     "forgotPassword": {
         "home": "HOME",
