--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -136,7 +136,7 @@
         "youHaveTo": "You have to accept",
         "terms": "Terms and Condition",
         "before": "before you can use HCW@Home.",
-        "pleaseAccept": "You have to accept {{terms}}  before",
+        "pleaseAccept": "You have to accept {{terms}} before you can use HCW@Home",
         "selectCountry": "This terms applies to the country:",
         "notConfigured": "Terms and conditions have not yet been configured.",
         "description": "Access condition"
